# CHIP-8

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
include/: config.h  emulator.h  registers.h
src/: emulator.c  main.c
